--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.mindrot</groupId>
@@ -42,7 +49,12 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>6.0.5</version>
+            <version>8.0.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.igdb</groupId>
+            <artifactId>api-java</artifactId>
+            <version>2.0.0</version>
         </dependency>
     </dependencies>
 
